[package]
name = "lvgl"
description = "LVGL bindings for Rust. A powerful and easy-to-use embedded GUI with many widgets, advanced visual effects (opacity, antialiasing, animations) and low memory requirements (16K RAM, 64K Flash)."
version = "0.5.2"
authors = ["Rafael Caricio <crates.lvgl@caric.io>"]
edition = "2018"
repository = "https://github.com/rafaelcaricio/lvgl-rs"
license = "MIT"
readme = "../README.md"
categories = ["api-bindings", "embedded", "gui", "no-std"]
keywords = ["littlevgl", "lvgl", "graphical_interfaces"]
build = "build.rs"

[dependencies]
lvgl-sys = { version = "0.5.2", path = "../lvgl-sys" }
cty = "0.2.1"
embedded-graphics = "0.6.2"
cstr_core = "0.2.3"
bitflags = "1.2.1"
parking_lot = "0.11.1"
heapless = "0.7.1"

[features]
alloc = ["cstr_core/alloc"]
lvgl_alloc = ["alloc"]

[build-dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.24"
lvgl-codegen = { version = "0.5.2", path = "../lvgl-codegen" }
lvgl-sys = { version = "0.5.2", path = "../lvgl-sys" }

[dev-dependencies]
embedded-graphics-simulator = "0.2.1"

[[example]]
name = "app"
path = "../examples/app.rs"
required-features = ["alloc"]

[[example]]
name = "demo"
path = "../examples/demo.rs"
required-features = ["alloc"]

[[example]]
name = "bar"
path = "../examples/bar.rs"
required-features = ["alloc"]

[[example]]
name = "button_click"
path = "../examples/button_click.rs"
required-features = ["alloc"]

[[example]]
name = "gauge"
path = "../examples/gauge.rs"
required-features = ["alloc"]

[[example]]
name = "arc"
path = "../examples/arc.rs"
required-features = ["alloc"]
